minor optimization